30-Oct-2015 Laurent Duflot
	* data/data15_13TeV_p2425.ds: update list
	* data/data15_13TeV_p2425_debug.ds: debug stream datasets

28-Oct-2015 Geraldine Conti
	* Added FillPhotonProxies function, similarly to what is done for
	electrons, muons and jets

27-Oct-2015 Geraldine Conti
	* Fixed el pT to 10GeV for overlap removal

26-Oct-2015 Geraldine Conti
	* BuildSUSYObjects.cxx : changed photons to "Loose"
	* PhysObjProxyFillerTruth.cxx : added condition for iso electrons and muons

26-Oct-2015 Laurent Duflot
	* update to SUSYTools-00-06-27-03 / SUSY,2.3.32a
	* tag as ZeroLeptonRun2-00-00-54

24-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list from 1.7fb-1 GRL

23-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list from 1.7fb-1 GRL

21-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list from 1.4fb-1 GRL

21-Oct-2015 Larry Lee
	* FilterUpdateMerge.py: write only one cycle of output tree

16-Oct-2015 Laurent Duflot
	* FilterUpdateMerge.py: add protection against multiple tree cycles

13-Oct-2015 Laurent Duflot
	* python/mc15_13TeV_MCSampleList.py: add ttbar alt samples and madgraph W/Z

12-Oct-2015 Laurent Duflot
	* data/data15_13TeV_p2419.ds: update lists

10-Oct-2015 Laurent Duflot
	* python/mc15_13TeV_MCSampleList.py: remove 410015,410016 due to
	overlap
	* data/mc15_13TeV_25ns_SM_p2419.ds, data/data15_13TeV_p2425.ds: update
	lists

09-Oct-2015 Laurent Duflot
	* DetectorQuality: also check Tile and Core errors
	* CRWT, CRZ, CR3L: remove HLT_e24_lhmedium_iloose_L1EM18VH (prescaled)

08-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list of p2419 SM MC samples
	* makeDatasetList.py: differentiate data and mc via prefix
	* PhysObjProxyUtils: fix typo in dPhiBadTile
	* data/data15_13TeV_p2425.ds : update list of p2425 data samples

07-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list of p2419 SM MC samples

06-Oct-2015 Laurent Duflot